Upgrades the project to jdk 17